# dreamer-rssm

./: .gitignore  README.md  RESULTS.md  pyproject.toml
agents/: README.md
baselines/: common.py  dqn_rainbow.py  ppo.py  sac.py
configs/: config.yaml
configs/ablation/: deter_128.yaml  deter_256.yaml  entropy_1e-3.yaml  entropy_1e-4.yaml  gaussian_latent.yaml  horizon_10.yaml  horizon_20.yaml  horizon_5.yaml  no_free_nats.yaml  no_kl_balance.yaml  no_reconstruction.yaml  stoch_16x16.yaml  stoch_32x64.yaml  (+2 more)
data/: __init__.py  replay_buffer.py
envs/: __init__.py  dmc.py  factory.py  wrappers.py
experiments/: run_seeds.py
models/: README.md  actor.py  critic.py  decoder.py  encoder.py  heads.py  losses.py  return_normalizer.py  rssm.py  world_model.py
notebooks/: method_validation.ipynb
scripts/: verify_pipeline.py
slurm/: ablations.sbatch  benchmark.sbatch  benchmark_array.sbatch  parametric.sbatch  setup_athena.sh
tests/: conftest.py  test_ablations.py  test_actor_critic.py  test_baseline_protocol.py  test_common_logger.py  test_heads.py  test_imagine_rollout.py  test_lambda_returns.py  test_losses.py  test_phase4_viz.py  test_replay_buffer.py  test_rssm.py  test_world_model.py  test_wrappers.py
train/: __init__.py  collect.py  common_logger.py  dreamer_loop.py  imagine_rollout.py  lambda_returns.py  logger.py  run_benchmark.py  train_world_model.py
viz/: ablation_summary.py  benchmark_comparison.py  dream_vs_real.py  learning_curves.py  open_loop_rollout.py  real_vs_imagined_video.py  reconstruction.py  sanity_checks.py  wm_viz_utils.py
(+13 files in other folders)
