[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamer-rssm"
version = "0.1.0"
description = "World-model RL in the style of DreamerV2/V3 - Phase 0: data pipeline (envs, replay buffer, random collection)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "gymnasium>=1.0",
    "ale-py>=0.10",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tensorboard>=2.14",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dmc = ["dm_control>=1.0"]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["envs", "data", "train", "viz", "models", "agents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
